# notion-font-customizer

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
src/: index.ts
src/notion_font_customizer/: __main__.py  cli.py
