[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-font-customizer"
version = "0.1.0"
description = "Custom font patcher for macOS Notion app"
requires-python = ">=3.10"
dependencies = []

[[project.authors]]
name = "xupeng"
email = "xupeng@xupeng.me"

[project.scripts]
notion-font-customizer = "notion_font_customizer.cli:main"
nfc = "notion_font_customizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_font_customizer"]
